@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR_T4
skinparam classBackgroundColor LOGIC_COLOR

class AddressBookParser
class ListProcOnCommandParser
class ListProcOnCommand {
    <color:white>- targetDate:DateWithoutTime</color>
}
show ListProcOnCommand attribute

AddressBookParser ..> ListProcOnCommandParser
ListProcOnCommandParser ..> ListProcOnCommand

@enduml
